[gd_scene load_steps=5 format=3 uid="uid://j7awku87rc5i"]

[ext_resource type="Script" path="res://puzzle_template.gd" id="1_gnq1i"]
[ext_resource type="Script" path="res://BackButton.gd" id="2_xy557"]
[ext_resource type="Script" path="res://PuzzleRoot.gd" id="3_kk4df"]
[ext_resource type="Script" path="res://day_1/Solution2.gd" id="4_tla2f"]

[node name="PuzzleTemplate" type="Node2D"]
script = ExtResource("1_gnq1i")
dayNumber = 1
partNumber = 2

[node name="BackButton" type="Button" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 177.0
offset_bottom = 51.0
text = "Back to Main Menu"
script = ExtResource("2_xy557")

[node name="PuzzleRoot" type="Node2D" parent="."]
position = Vector2(0, 71)
script = ExtResource("3_kk4df")

[node name="Control" type="Control" parent="PuzzleRoot"]
layout_mode = 3
anchors_preset = 0
offset_top = -71.0
offset_right = 40.0
offset_bottom = -31.0
script = ExtResource("4_tla2f")

[node name="LineLabel" type="Label" parent="PuzzleRoot/Control"]
layout_mode = 0
offset_left = 700.0
offset_top = 387.0
offset_right = 740.0
offset_bottom = 413.0
text = "Line:"

[node name="CalibrationLabel" type="Label" parent="PuzzleRoot/Control"]
layout_mode = 0
offset_left = 603.0
offset_top = 433.0
offset_right = 740.0
offset_bottom = 459.0
text = "Calibration Value:"

[node name="SumLabel" type="Label" parent="PuzzleRoot/Control"]
layout_mode = 0
offset_left = 700.0
offset_top = 479.0
offset_right = 740.0
offset_bottom = 505.0
text = "Line:"

[node name="InputLabel" type="Label" parent="PuzzleRoot/Control"]
layout_mode = 0
offset_left = 750.0
offset_top = 387.0
offset_right = 790.0
offset_bottom = 410.0
text = "asdf"

[node name="ResultLabel" type="Label" parent="PuzzleRoot/Control"]
layout_mode = 0
offset_left = 750.0
offset_top = 433.0
offset_right = 790.0
offset_bottom = 456.0
text = "0"

[node name="TotalLabel" type="Label" parent="PuzzleRoot/Control"]
layout_mode = 0
offset_left = 750.0
offset_top = 479.0
offset_right = 790.0
offset_bottom = 505.0
text = "0"

[connection signal="pressed" from="BackButton" to="BackButton" method="_on_pressed"]
[connection signal="finish_parsing" from="PuzzleRoot" to="PuzzleRoot/Control" method="_on_puzzle_root_finish_parsing"]
